# shikataganai

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build-release.yml
assets/meshes/: meshes.glb  meshes.gltf
assets/shader/: mesh.frag.spv  mesh.vert.spv  voxel.frag.spv  voxel.vert.spv  voxel.wgsl
assets/shader/src/: mesh.frag  mesh.vert  voxel.frag  voxel.vert
shaders/src/: inventory_mesh.vert  offscreen.frag  offscreen.vert  voxel.frag  voxel.vert
shikataganai_client/: Cargo.toml  build.rs
shikataganai_client/shaders/src/: inventory_mesh.frag  inventory_mesh.vert  mesh.frag  offscreen.frag  particle.frag  particle.geom  particle.vert  voxel.frag
shikataganai_client/src/: main.rs
shikataganai_client/src/ecs/: mod.rs
shikataganai_client/src/ecs/components/: block_or_item.rs  chunk.rs  mod.rs
shikataganai_client/src/ecs/components/blocks/: mod.rs  regular_blocks.rs  regular_meshes.rs
shikataganai_client/src/ecs/components/items/: mod.rs  regular_items.rs
shikataganai_client/src/ecs/plugins/: camera.rs  client.rs  console.rs  game.rs  imgui.rs  mod.rs  preamble.rs  settings.rs
shikataganai_client/src/ecs/plugins/rendering/: draw_command.rs  mod.rs
shikataganai_client/src/ecs/plugins/rendering/inventory_pipeline/: inventory_cache.rs  mod.rs  node.rs  pipeline.rs  systems.rs
shikataganai_client/src/ecs/plugins/rendering/mesh_pipeline/: bind_groups.rs  draw_command.rs  loader.rs  mod.rs  pipeline.rs  systems.rs
shikataganai_client/src/ecs/plugins/rendering/particle_pipeline/: bind_groups.rs  draw_command.rs  mod.rs  pipeline.rs  systems.rs
shikataganai_client/src/ecs/plugins/rendering/skybox_pipeline/: bind_groups.rs  draw_command.rs  mod.rs  pipeline.rs  systems.rs
shikataganai_client/src/ecs/plugins/rendering/voxel_pipeline/: bind_groups.rs  consts.rs  draw_command.rs  meshing.rs  mod.rs  pipeline.rs  systems.rs
shikataganai_client/src/ecs/resources/: block.rs  chunk_map.rs  light.rs  mod.rs  player.rs  world.rs
shikataganai_client/src/ecs/systems/: input.rs  light.rs  mod.rs  remesh.rs
shikataganai_client/src/ecs/systems/user_interface/: chest_inventory.rs  connecting.rs  game_menu.rs  hot_bar.rs  main_menu.rs  mod.rs  player_inventory.rs
shikataganai_common/: Cargo.toml
shikataganai_common/src/: lib.rs  networking.rs
shikataganai_common/src/ecs/components/: chunk.rs  item.rs  mod.rs
shikataganai_common/src/ecs/components/blocks/: animation.rs  block_id.rs  mod.rs  regular_blocks.rs  regular_meshes.rs
shikataganai_common/src/ecs/components/functors/: mod.rs
shikataganai_common/src/ecs/resources/: light.rs  mod.rs  player.rs  world.rs
shikataganai_common/src/recipes/: in_world.rs  mod.rs
shikataganai_common/src/util/: array.rs  mod.rs
shikataganai_server/: Cargo.toml
shikataganai_server/src/: lib.rs  main.rs
shikataganai_server/src/ecs/: mod.rs
shikataganai_server/src/ecs/plugins/: server.rs
shikataganai_server/src/ecs/resources/: light.rs  mod.rs  world.rs
shikataganai_server/src/ecs/systems/: chunkgen.rs  light.rs  mod.rs
src/: main.rs
src/ecs/components/: block.rs  block_or_item.rs  chunk.rs  item.rs  light.rs  mod.rs
src/ecs/components/blocks/: block_id.rs  mod.rs  regular_blocks.rs  regular_meshes.rs
src/ecs/plugins/: animation.rs  camera.rs  console.rs  game.rs  imgui.rs  mod.rs  preamble.rs  settings.rs  voxel.rs
src/ecs/plugins/rendering/inventory_pipeline/: mod.rs  node.rs  pipeline.rs  systems.rs
src/ecs/plugins/rendering/mesh_pipeline/: bind_groups.rs  draw_command.rs  loader.rs  mod.rs  pipeline.rs  systems.rs
src/ecs/plugins/rendering/voxel_pipeline/: bind_groups.rs  meshing.rs  mod.rs  pipeline.rs  systems.rs
src/ecs/plugins/voxel/: inventory_pipeline.rs  mesh_pipeline.rs  misc.rs  mod.rs  systems.rs  voxel_pipeline.rs
src/ecs/resources/: block.rs  chunk_map.rs  light.rs  mod.rs  player.rs  strain.rs  ui.rs
src/ecs/systems/: chunkgen.rs  input.rs  inventory.rs  light.rs  mod.rs  remesh.rs  strain.rs  ui.rs
src/ecs/systems/user_interface/: game_menu.rs  hot_bar.rs  main_menu.rs  mod.rs
src/util/: array.rs  mod.rs
