[package]
name = "shikataganai"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "*"
wgpu = "*"
toml = "*"
gltf = "*"
image = "*"
imgui = "*"
winit = "0.26.1"
serde = "*"
noise = "*"
strum = "*"
base64 = "*"
anyhow = "*"
bytemuck = "*"
imgui-sys = "*"
duplicate = "*"
itertools = "*"
num-traits = "*"
strum_macros = "*"
futures-lite = "*"
iyes_loopless = "*"
bytemuck_derive = "*"
percent-encoding = "*"
imgui-wgpu = { git = "https://github.com/Nhlest/imgui-wgpu-rs", branch = "master" }
imgui-winit-support = { version = "*", default-features = false, features = [ "winit-26" ] }
tracing = "*"

bevy_embedded_assets = "0.4"
bevy_framepace = "*"

[dependencies.bevy_rapier3d]
version = "0.16.0"
default-features = false
features = ["simd-stable", "dim3"]

[dependencies.bevy]
version = "0.8"
default-features = false
features = ["x11", "bevy_winit", "png", "bevy_core_pipeline"]

[build-dependencies]
glsl-to-spirv = "0.1.5"

# Profile

[profile.release]
strip = true

[profile.dev]
#strip = true
opt-level = 1
overflow-checks = false

[profile.dev.package."*"]
#strip = true
opt-level = 3
overflow-checks = false

# Features

[features]
default = []
trace = ["bevy/trace", "bevy/trace_tracy"]