[workspace]
resolver = "2"
members = [
  "shikataganai_client",
  "shikataganai_server",
  "shikataganai_common",
]

# Profile

[profile.release]
strip = true

[profile.dev]
#strip = true
opt-level = 1
overflow-checks = false

[profile.dev.package."*"]
#strip = true
opt-level = 3
overflow-checks = false