[package]
resolver = "2"
name = "shikataganai_client"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.14.*"
toml = "0.5.*"
gltf = "1.0.0"
image = "0.24.*"
egui = "0.20.*"
winit = "0.27.*"
serde = "1.0.*"
noise = "0.8.*"
strum = "0.24.*"
base64 = "0.20.*"
anyhow = "1.0.*"
flate2 = "1.0.*"
tracing = "0.1.*"
bincode = "1.3.*"
bytemuck = "1.12.*"
itertools = "0.10.*"
bevy_renet = "0.0.6"
bevy_egui = "0.18.*"
num-traits = "0.2.*"
strum_macros = "0.24.*"
futures-lite = "1.12.*"
iyes_loopless = "0.9.*"
bevy_framepace = "0.9.*"
bevy_atmosphere = "0.5.*"
bytemuck_derive = "1.3.*"
percent-encoding = "2.2.*"
shikataganai_common = { path = "../shikataganai_common" }
shikataganai_server = { path = "../shikataganai_server" }
bevy_embedded_assets = "0.6.*"

[dependencies.bevy_rapier3d]
version = "0.19.*"
default-features = false
features = ["simd-stable", "dim3"]

[dependencies.bevy]
version = "0.9.*"
default-features = false
features = ["x11", "bevy_winit", "png", "bevy_core_pipeline"]

[build-dependencies]
glsl-to-spirv = "0.1.*"

# Features

[features]
default = []
trace = ["bevy/trace", "bevy/trace_tracy"]