[package]
resolver = "2"
name = "shikataganai_common"
version = "0.1.0"
edition = "2021"

[dependencies]
#bincode = "1.3.*"
serde = "1.0.*"
bevy_renet = { git = "https://github.com/lucaspoffo/renet", branch = "master" }
noise = "0.8.*"

[dependencies.bevy]
version = "0.8.*"
default-features = false
features = []