[package]
resolver = "2"
name = "shikataganai_server"
version = "0.1.0"
edition = "2021"

[dependencies]
shikataganai_common = { path = "../shikataganai_common" }
serde = "1.0.*"
bincode = "1.3.*"
bevy_renet = { git = "https://github.com/lucaspoffo/renet", branch = "master" }
iyes_loopless = "0.7.*"
futures-lite = "1.12.*"
num-traits = "0.2.*"
flate2 = "1.0.*"

[dependencies.bevy]
version = "0.8.*"
default-features = false
features = []

# Features

[features]
default = []
trace = ["bevy/trace", "bevy/trace_tracy"]