[package]
resolver = "2"
name = "shikataganai_server"
version = "0.1.0"
edition = "2021"

[dependencies]
shikataganai_common = { path = "../shikataganai_common" }
serde = "1.0.*"
bincode = "1.3.*"
bevy_renet = "0.0.6"
iyes_loopless = "0.9.*"
futures-lite = "1.12.*"
num-traits = "0.2.*"
flate2 = "1.0.*"

[dependencies.bevy]
version = "0.9.*"
default-features = false
features = []

# Features

[features]
default = []
trace = ["bevy/trace", "bevy/trace_tracy"]